--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_bloc: ^8.1.6
   country_code_picker: ^3.0.0
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
