--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_bloc: ^8.1.6
   country_code_picker: ^3.0.0
   equatable: ^2.0.5
+  firebase_auth: ^5.3.1
+  firebase_core: ^3.6.0
 
 dev_dependencies:
   flutter_test:
