--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cloud_firestore: ^5.4.4
   shared_preferences: ^2.3.2
   image_picker: ^1.1.2
+  firebase_storage: ^12.3.5
 
 dev_dependencies:
   flutter_test:
