--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,11 @@ dependencies:
   shared_preferences: ^2.3.2
   image_picker: ^1.1.2
   firebase_storage: ^12.3.5
+  http: ^1.2.2
+  crypto: ^3.0.6
+  cloudinary_url_gen: ^1.6.0
+  cloudinary_flutter: ^1.3.0
+  cloudinary_public: ^0.21.0
 
 dev_dependencies:
   flutter_test:
