--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,12 +43,14 @@ dependencies:
   cloud_firestore: ^5.4.4
   shared_preferences: ^2.3.2
   image_picker: ^1.1.2
-  firebase_storage: ^12.3.5
+  firebase_storage: ^12.3.6
   http: ^1.2.2
   crypto: ^3.0.6
   cloudinary_url_gen: ^1.6.0
   cloudinary_flutter: ^1.3.0
   cloudinary_public: ^0.21.0
+  carousel_slider: ^5.0.0
+  firebase_app_check: ^0.3.1+6
 
 dev_dependencies:
   flutter_test:
