--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,12 @@ dependencies:
   cloudinary_public: ^0.21.0
   carousel_slider: ^5.0.0
   firebase_app_check: ^0.3.1+6
+  google_fonts: ^6.2.1
+  shimmer: ^3.0.0
+  animate_do: ^3.3.4
+  cached_network_image: ^3.4.1
+  font_awesome_flutter: ^10.8.0
+  flutter_svg: ^2.0.15
 
 dev_dependencies:
   flutter_test:
