--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   cached_network_image: ^3.4.1
   font_awesome_flutter: ^10.8.0
   flutter_svg: ^2.0.15
+  firebase_core_web: ^2.19.0
 
 dev_dependencies:
   flutter_test:
