--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   flutter_svg: ^2.0.15
   firebase_core_web: ^2.19.0
+  connectivity_plus: ^2.0.2
+  lottie: ^2.0.0
 
 dev_dependencies:
   flutter_test:
