--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   connectivity_plus: ^2.0.2
   lottie: ^2.0.0
   country_code_picker: ^3.1.0
+  intl: ^0.20.1
 
 dev_dependencies:
   flutter_test:
