--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   lottie: ^2.0.0
   country_code_picker: ^3.1.0
   intl: ^0.20.1
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_test:
