--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   country_code_picker: ^3.1.0
   intl: ^0.20.1
   google_sign_in: ^6.2.2
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
