--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   intl: ^0.20.2
   google_sign_in: ^6.2.2
   uuid: ^4.5.1
+  razorpay_flutter: ^1.3.7
+  fluttertoast: ^8.2.12
 
 dev_dependencies:
   flutter_test:
