--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,7 +30,16 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+      <meta-data
+            android:name="com.google.android.gms.auth.api.signin"
+            android:value="http://544605270040-40ghkb5n4a0r0gcquqonatard20k9nqi.apps.googleusercontent.com"/>
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="default_channel"/>
+       
     </application>
+    <uses-permission android:name="android.permission.INTERNET"/>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
          https://developer.android.com/reference/android/content/Intent#ACTION_PROCESS_TEXT.
