--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,10 +65,19 @@ dependencies:
   uuid: ^4.5.1
   razorpay_flutter: ^1.3.7
   fluttertoast: ^8.2.12
+  flutter_launcher_icons: ^0.14.3
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/app_logo.png"  # Path to your app logo
+  adaptive_icon_background: "#ffffff" # Background for Android adaptive icon
+   
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
